# Finance-Webapp-Streamlit

./: .env.template  .gitignore  README.md  login_page.py  main.py  main_page.py  mongodb_manager.py  pyproject.toml  streamlit_app.py  testing_file.py
app/: streamlit_app.py  testing_file.ipynb
app/src/: logger.py
app/src/login/: __init__.py  models.py  mongodb_manager.py  schemas.py
app/src/pages/: login_page.py  main_page.py  show_session_state.py  waterfall.py
app/src/utils/: claude_api.py  gocardless_sandbox_api.py  llm_api.py
